Finished enabling login and interactions as a user

--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Card View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@using Microsoft.AspNet.Identity
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
