finished enabling task comment adding

--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -86,7 +86,7 @@
                                         </div>
                                     </div>
                             }
-                            <p>@Model.ElementAt(innerIndex).description</p>
+                            <p class="card-ptext">@Model.ElementAt(innerIndex).description</p>
                         </div>
                     </div>
                 </div>
