--- a/TicketTracker/Content/Site.css
+++ b/TicketTracker/Content/Site.css
@@ -16,3 +16,11 @@
     white-space: normal;
 }
 
+.card-ptext {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
