--- a/TicketTracker/Content/assets/css/sb-admin-2.css
+++ b/TicketTracker/Content/assets/css/sb-admin-2.css
@@ -85,8 +85,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 abbr[title],
